# vehicle_platform

./: CMakeLists.txt  README.md  extrinsics.yaml  package.xml  sample_file.rviz
config/: avt_mako_15hz.yaml  camera_fl.intrinsics.yaml  camera_rc_arena_camera_node.intrinsics.yaml  camera_tl_arena_camera_node.intrinsics.yaml  camera_tr_arena_camera_node.intrinsics.yaml  extrinsics.yaml  lidar_tc_velodyne_driver_node-params.yaml  lidar_tl_velodyne_driver_node-params.yaml  lidar_tr_velodyne_driver_node-params.yaml
launch/: extrinsics.launch.py  system_bringup.launch.py  system_bringup_tf_alt.launch.py
scripts/: map_odom_tf_from_gps.py  run_tf_alt_from_map.py
