<?xml version="1.0"?>
<package format="3">
  <name>vehicle_platform</name>
  <version>0.1.0</version>
  <description>Unified vehicle platform bringup launch package.</description>

  <maintainer email="maintainer@example.com">vehicle_platform_maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>carma_driver_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>avt_vimba_camera</exec_depend>

  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>velodyne_laserscan</exec_depend>
  <exec_depend>novatel_oem7_driver</exec_depend>
  <exec_depend>v2x_ros_driver</exec_depend>
  <exec_depend>j2735_v2x_msgs</exec_depend>
  <exec_depend>arena_camera_node</exec_depend>
  <exec_depend>raptor_dbw_can</exec_depend>
  <exec_depend>rmw_zenoh_cpp</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
